# tetris-rust

./: Cargo.toml
src/: main.rs
src/engine/: lib.rs  mod.rs
src/engine/common/: mod.rs
src/engine/common/storage/: lib.rs
src/engine/common/ui/: button.rs  check_box.rs  color_picker.rs  mod.rs  rectangle.rs  shape_creator.rs  text.rs
src/engine/events/: events.rs  mod.rs
src/engine/events/base/: event.rs
src/engine/events/types/: base.rs  button.rs  mod.rs
src/engine/listeners/: lib.rs  mod.rs
src/engine/listeners/base/: mod.rs  render.rs  tick.rs  update.rs
src/engine/listeners/base/render/: mod.rs  render.rs
src/engine/listeners/base/render/components/: game_over_component.rs  mod.rs  pause_component.rs
src/engine/listeners/base/render/screens/: create_shape_screen.rs  game_screen.rs  main_screen.rs  mod.rs  unknown_screen.rs
src/engine/managers/: game_manager.rs  game_state.rs  game_statics.rs  mod.rs
src/engine/utils/: mod.rs
src/engine/utils/crypto/: lib.rs
src/engine/utils/storage/: lib.rs
