[package]
name = "tetris-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
event-listener-primitives = "2.0.1"
lazy_static = "1.5.0"
once_cell = "1.19.0"
platform-dirs = "0.3.0"
rand = "0.8.5"
raylib = "5.0.2"
rodio = "0.19.0"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
